--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,6 @@
     "removeComments": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es5",
-    "types": [
-      "jest"
-    ]
+    "target": "es6"
   }
 }
