--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "main": "tsconfig.json",
   "peerDependencies": {
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "tslib": "^2.1.0"
   }
 }
