--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     // https://github.com/Microsoft/TypeScript/issues/29172
     // "baseUrl": ".",
     "declaration": false,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
