--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   ],
   "main": "tsconfig.json",
   "peerDependencies": {
-    "typescript": "^4.1.5",
-    "tslib": "^2.1.0"
+    "typescript": "^4"
   }
 }
