--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,24 @@
 {
   "compilerOptions": {
-    // "alwaysStrict": true, // strict
+    "alwaysStrict": true, // recommended, strict
     // https://github.com/Microsoft/TypeScript/issues/29172
     // "baseUrl": ".",
-    "declaration": false,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "importHelpers": true,
-    "isolatedModules": true,
+    "declaration": false, // use on a per-project basis
+    "esModuleInterop": true, // recommended, helps loading modules
+    "exactOptionalPropertyTypes": true, // recommended, explicit types
+    "experimentalDecorators": true, // might be used, not reason to disable
+    "forceConsistentCasingInFileNames": true, // recommended, explicit module loading
+    "isolatedModules": true, // treat files as modules
     "module": "commonjs",
     "moduleResolution": "node",
     // "noEmitOnError": true, // this breaks tests with TS errors
-    "noErrorTruncation": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    // "noImplicitThis": true, // strict
-    // "noImplicitAny": true, // strict
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noErrorTruncation": true, // full log on error
+    "noFallthroughCasesInSwitch": true, // catch missing break/return in switch statements
+    "noImplicitReturns": true, // catch missing return in functions
+    "noImplicitThis": true, // recommended, strict
+    "noImplicitAny": true, // recommended, strict
+    "noUnusedLocals": true, // remove unused variables
+    "noUnusedParameters": true, // remove unused parameters
     // https://github.com/Microsoft/TypeScript/issues/29172
     // "outDir": "dist",
     // https://github.com/Microsoft/TypeScript/issues/29172
@@ -27,16 +27,17 @@
     //     "src/*"
     //   ]
     // },
-    "preserveConstEnums": true,
-    "removeComments": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
+    "preserveConstEnums": true, // required for isolatedModules
+    "removeComments": true, // no need for comments in build files
+    "resolveJsonModule": true, // for loading json files
+    "skipLibCheck": true, // recommended, faster compilation
+    "sourceMap": true, // add source map for debugging
     "strict": true,
-    // "strictBindCallApply": true // strict
-    // "strictNullChecks": true, // strict
-    // "strictFunctionTypes": true, // strict
-    // "strictPropertyInitialization": true, // strict
-    "target": "esnext"
+    "strictBindCallApply": true, // recommended, strict
+    "strictNullChecks": true, // recommended, strict
+    "strictFunctionTypes": true, // recommended, strict
+    "strictPropertyInitialization": true, // recommended, strict
+    "target": "es2020", // for node 14 https://github.com/tsconfig/bases/blob/main/bases/node14.json#L8
+    "useUnknownInCatchVariables": true // recommended, strict
   }
 }
